galaxy/pulp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: galaxy
spec:
  tls:
    - hosts:
        - galaxy.example.com
      secretName: galaxy-secret-tls
  rules:
    - host: galaxy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: galaxy-web-svc
                port:
                  number: 24880
